# project-2048

./: CMakeLists.txt  DQNModel.py  README.md
2048-web/: README.md
2048-web/js/: application.js
DQNModel/: data_visualizer.py  requirements.txt  run_model.py  train_model.py
DQNModel/models/double_dueling_dqn_model/: hi_10000128_policy.weights.h5  hi_10000128_target.weights.h5  hi_20000000_policy.weights.h5  hi_20000000_target.weights.h5  hi_30000128_policy.weights.h5  hi_30000128_target.weights.h5  hi_40000000_policy.weights.h5  hi_40000000_target.weights.h5  hi_50000128_policy.weights.h5  hi_50000128_target.weights.h5  hi_60000000_policy.weights.h5  hi_60000000_target.weights.h5  hi_72500224_policy.weights.h5  hi_72500224_target.weights.h5
DQNModel/raw_data/: 0_million_tuned.txt  10_million_tuned.txt  20_million_tuned.txt  30_million_tuned.txt  40_million_tuned.txt  50_million_tuned.txt  60_million_tuned.txt  72_million_tuned.txt
DQNModel/src/: PySharedMemoryInterface.pyi  agent.py  buffer.py  env_manager.py  model.py  play.py  sim.py  speed.txt  train.py  utils.py
DQNModel/src/saved_models/: dqn_policy.weights.h5  dqn_target.weights.h5
DQNTrainer/: CMakeLists.txt  useful_commands.txt
DQNTrainer/include/: game.hpp  lock_free_queue.hpp  lock_queue.hpp  look_up_table.hpp  manager.hpp  rng.hpp  shared_memory_structures.hpp  simulator.hpp  worker.hpp
DQNTrainer/python-compatibility-layer/: PySharedMemoryInterface.pyi  debug.txt  hello.txt  test.py  test_results.txt
DQNTrainer/src/: game.cpp  look_up_table.cpp  main.cpp  manager.cpp  pybindings.cpp  run_game.cpp  run_worker.cpp  shared_memory_structures.cpp  simulator.cpp  worker.cpp
DQNTrainer/tests/: look_up_table_tests.cpp  simulator_tests.cpp
Training/include/: look_up_table.hpp  manager.hpp  rng.hpp  shared_memory_structures.hpp  simulator.hpp  worker.hpp
Training/src/: main.cc  manager.cpp  run_worker.cc  simulator.cpp  worker.cpp
Training/tests/: look_up_table_tests.cpp
